<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TalkTime</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_billDay">Billing Day</string>
    <string name="pref_billDay_default">18</string>
    <string name="pref_planMinutes">Telco Plan</string>
    <string name="pref_planMinutes_summary">Minutes in monthly plan</string>
    <string name="pref_planMinutes_dialog">Enter Your Minutes</string>
    <string name="title_activity_preference">Settings</string>
    <string name="title_activity_preference2">About</string>
    <string name="pref_showDetails">Show Details</string>
    <string name="pref_showDetails_summary">Check if you want detailed call log</string>
     
</resources>
